--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,83 @@
+body {
+  background: url("../img/site-bg.jpg") no-repeat;
+}
+
+h1 {
+  color : #ffffff;
+  font-size : 45px;
+  font-family: Roboto Slab, sans-serif;
+  text-align : center;
+  margin-top : 100px; 
+}
+button {
+  /* display: inline-block; */
+  position : absolute;
+  top : 50%;
+  height:60px;
+  width: 150px;
+  /* text-align : center; */
+}
+
+.button {
+  padding: 15px 25px;
+  font-size: 20px;
+  font-family: Roboto Slab, sans-serif;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #1f1e1c;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: red}
+
+.button:active {
+  background-color: #1f1e1c;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.wrapper {
+  /* text-align: center; */
+  margin : 250px 570px;
+}
+
+
+/* .button {
+  position: absolute;
+  top: 50%;
+}  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* html, body {
     width:  100%;
     height: 100%;
